--- a/style/style.css
+++ b/style/style.css
@@ -15,9 +15,16 @@
   top: 100px;
   left: 540px;
   max-height: 85%;
+  height: 85%;
   max-width: 85%;
+  width: 85%;
 }
 
 .hide-modal {
   display: none;
+}
+
+.modal-image {
+  max-width: 100%;
+  max-height: 100%;
 }
