--- a/style/style.css
+++ b/style/style.css
@@ -6,18 +6,26 @@
   color: black;
 }
 
+.game-link:hover {
+  text-decoration: none;
+  color: black;
+}
+
 .details {
   font-size: 0.9em;
 }
 
 .show-modal {
   position: fixed;
-  top: 100px;
-  left: 540px;
+  margin-left: auto;
+  margin-right: auto;
+  top: 50px;
   max-height: 85%;
   height: 85%;
   max-width: 85%;
   width: 85%;
+  border: solid black 1px;
+  background: white;
 }
 
 .hide-modal {
@@ -27,4 +35,8 @@
 .modal-image {
   max-width: 100%;
   max-height: 100%;
+}
+
+.game-deck {
+  font-size: 5px !important;
 }
